# ordo

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build_errors.txt  build_errors_conv.txt  build_errors_eval.txt  build_errors_eval2.txt  build_errors_llm.txt  build_errors_llm2.txt  build_errors_llm3.txt  build_errors_llm4.txt  compose.yaml  llm_instructions.md  package-lock.json  package.json  playwright.config.ts  playwright.real-daemon.browser.config.ts  test_output.txt
.github/: PULL_REQUEST_TEMPLATE.md  (+1 more)
crates/ordo-daemon/: Cargo.toml
crates/ordo-daemon/fixtures/llm-replay/: tiny-success.json
crates/ordo-daemon/src/: answer_drafts.rs  artifact_patches.rs  artifacts.rs  attribution.rs  availability.rs  backups.rs  briefs.rs  business.rs  capabilities.rs  chat_bootstrap.rs  connections.rs  content_analytics.rs  conversation_analysis.rs  conversation_gateway.rs  conversation_protocol.rs  conversations.rs  corpus.rs  diagnostics.rs  entry_points.rs  errors.rs  ethical_persuasion.rs  eval_artifact_review.rs  eval_harness.rs  eval_personas.rs  eval_simulators.rs  events.rs  experience_preferences.rs  feedback.rs  generated_content_memory.rs  growth_report.rs  health.rs  install.rs  json_contracts.rs  kernel.rs  knowledge_graph.rs  lib.rs  live_eval_runner.rs  live_journey_report.rs  llm_accounting.rs  llm_gateway.rs  (+33 more)
crates/ordo-daemon/src/backups/: api.rs  core.rs  mod.rs  types.rs
crates/ordo-daemon/src/capabilities/: db.rs  mod.rs  registry.rs  types.rs
crates/ordo-daemon/src/conversation_gateway/: api.rs  handlers.rs  mod.rs  types.rs
crates/ordo-daemon/src/conversations/: core.rs  mod.rs  types.rs
crates/ordo-daemon/src/eval_harness/: cases.rs  core.rs  mod.rs  types.rs
crates/ordo-daemon/src/live_eval_runner/: admin_staff.rs  affiliate_referral.rs  mod.rs  planning.rs  qr_to_trial.rs  review_return.rs  utils.rs
crates/ordo-daemon/src/llm_gateway/: core.rs  mod.rs  types.rs
(+330 files in other folders)
