[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
jsonschema = { version = "0.46.4", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.43", features = ["macros", "net", "rt-multi-thread", "sync"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[workspace.dependencies.tempfile]
version = "3.14"
