[package]
name = "ordo-daemon"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
clap.workspace = true
constant_time_eq.workspace = true
jsonschema.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
